Convert index.php to index.html and update text
Changed the file from PHP to HTML and updated content.

--- a/page02/index.html
+++ b/page02/index.html
@@ -1,11 +1,9 @@
-<?php
-// page02/index.php
-?>
 <!doctype html>
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
   <title>Page 02</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       font-family: system-ui, -apple-system, "Segoe UI", Arial, sans-serif;
@@ -24,10 +22,9 @@
 <body>
   <div class="box">
     <h1>Page 02</h1>
-    <p>이건 두 번째 PHP 페이지입니다.</p>
-    <p>현재 시간: <b><?= date("Y-m-d H:i:s") ?></b></p>
+    <p>이건 두 번째 HTML 페이지입니다.</p>
 
-    <a href="../page01/index.php">← Page 01로 이동</a>
+    <a href="../page01/">← Page 01로 이동</a>
   </div>
 </body>
 </html>
