--- a/page03/index.html
+++ b/page03/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>We exist everywhere</title>
     <meta name="description" content="An interactive experience revealing hidden meaning through engagement">
     <link rel="stylesheet" href="style.css">
