--- a/page03/index.html
+++ b/page03/index.html
@@ -52,11 +52,92 @@
         </div>
     </main>
 
-    <!-- Chapter 2: Placeholder -->
+    <!-- Chapter 2: Creative Scroll Sections -->
     <main id="chapter2" class="chapter chapter-2">
-        <div class="chapter2-content">
-            <h1>Chapter 2</h1>
-            <p>Coming soon...</p>
+        <!-- Connecting Flow Line -->
+        <div class="ch2-flow-line">
+            <div class="ch2-flow-progress" id="flowProgress"></div>
+            <div class="ch2-flow-glow"></div>
+        </div>
+
+        <div class="chapter2-container">
+            <!-- Section 1: UNDERSTANDING -->
+            <section class="ch2-section" id="ch2Section1" data-index="1">
+                <div class="ch2-bg-number">01</div>
+                <div class="ch2-section-content ch2-layout-left">
+                    <div class="ch2-text-block">
+                        <span class="ch2-label">STEP 01</span>
+                        <h2 class="ch2-title">UNDER<br>STANDING</h2>
+                        <div class="ch2-title-line"></div>
+                    </div>
+                    <div class="ch2-image-wrapper">
+                        <div class="ch2-image-frame">
+                            <img src="assets/understanding.png" alt="Understanding" class="ch2-image">
+                        </div>
+                        <div class="ch2-image-accent"></div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Section 2: DESIGN -->
+            <section class="ch2-section" id="ch2Section2" data-index="2">
+                <div class="ch2-bg-number">02</div>
+                <div class="ch2-section-content ch2-layout-right">
+                    <div class="ch2-image-wrapper">
+                        <div class="ch2-image-frame">
+                            <img src="assets/design.png" alt="Design" class="ch2-image">
+                        </div>
+                        <div class="ch2-image-accent"></div>
+                    </div>
+                    <div class="ch2-text-block">
+                        <span class="ch2-label">STEP 02</span>
+                        <h2 class="ch2-title">DE<br>SIGN</h2>
+                        <div class="ch2-title-line"></div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Section 3: WEBSITE -->
+            <section class="ch2-section" id="ch2Section3" data-index="3">
+                <div class="ch2-bg-number">03</div>
+                <div class="ch2-section-content ch2-layout-left">
+                    <div class="ch2-text-block">
+                        <span class="ch2-label">STEP 03</span>
+                        <h2 class="ch2-title">WEB<br>SITE</h2>
+                        <div class="ch2-title-line"></div>
+                    </div>
+                    <div class="ch2-image-wrapper">
+                        <div class="ch2-image-frame">
+                            <img src="assets/website.png" alt="Website" class="ch2-image">
+                        </div>
+                        <div class="ch2-image-accent"></div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <!-- Floating Particles -->
+        <div class="ch2-particles" id="ch2Particles"></div>
+
+        <!-- Progress Indicator -->
+        <div class="ch2-progress">
+            <div class="ch2-progress-dot active" data-section="1"></div>
+            <div class="ch2-progress-line">
+                <div class="ch2-progress-fill" id="progressFill"></div>
+            </div>
+            <div class="ch2-progress-dot" data-section="2"></div>
+            <div class="ch2-progress-line">
+                <div class="ch2-progress-fill"></div>
+            </div>
+            <div class="ch2-progress-dot" data-section="3"></div>
+        </div>
+
+        <!-- Scroll Hint -->
+        <div class="scroll-hint ch2-hint" id="chapter2Hint">
+            <span class="hint-text">scroll to explore</span>
+            <div class="scroll-indicator">
+                <div class="scroll-arrow"></div>
+            </div>
         </div>
     </main>
 
