--- a/page04/index.html
+++ b/page04/index.html
@@ -39,11 +39,39 @@
     </section>
   </div>
 
-  <!-- Section 2: Hero -->
-  <section id="hero" class="section section--hero">
-    <div class="section__content">
-      <h1 class="hero__title">우리는 웹사이트를 만듭니다</h1>
-      <p class="hero__subtitle">명확하게. 구조적으로. 유지보수 가능하게.</p>
+  <!-- Section 2: Featured Work 1 - UNDERSTANDING -->
+  <section id="work-1" class="section section--work">
+    <div class="work__background work__background--1"></div>
+    <div class="work__content">
+      <p class="work__label">FEATURED WORK</p>
+      <h2 class="work__title">UNDERSTANDING</h2>
+      <div class="work__meta">
+        <span class="work__category">IDENTITY + WEBSITE</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 3: Featured Work 2 - DESIGN -->
+  <section id="work-2" class="section section--work">
+    <div class="work__background work__background--2"></div>
+    <div class="work__content">
+      <p class="work__label">FEATURED WORK</p>
+      <h2 class="work__title">DESIGN</h2>
+      <div class="work__meta">
+        <span class="work__category">BRANDING + UX</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 4: Featured Work 3 - WEBSITE -->
+  <section id="work-3" class="section section--work">
+    <div class="work__background work__background--3"></div>
+    <div class="work__content">
+      <p class="work__label">FEATURED WORK</p>
+      <h2 class="work__title">WEBSITE</h2>
+      <div class="work__meta">
+        <span class="work__category">DEVELOPMENT + DESIGN</span>
+      </div>
     </div>
   </section>
 
